# scrcpy

app/: meson.build
app/src/: display.c  icon.c  input_manager.c  opengl.c  scrcpy.c  screen.c
app/src/usb/: scrcpy_otg.c  screen_otg.c
app/src/util/: window.c
container/: Dockerfile
gradle/wrapper/: gradle-wrapper.properties
subprojects/: sdl2.wrap
subprojects/packagefiles/sdl2/: meson.build
